# LangGraph-Advanced-Tutorial

./: .env.example  .gitignore  pyproject.toml
Day-01/01-QuickStart/: 01-QuickStart-LangGraph-Tutorial.ipynb  02-QuickStart-LangGraph-Graph-API.ipynb  03-QuickStart-LangGraph-V1.ipynb
Day-01/02-Basic/: 01-LangGraph-Model.ipynb  02-LangGraph-Messages.ipynb  03-LangGraph-Agents.ipynb  04-LangGraph-Middleware.ipynb
Day-01/03-RAG/: 01-LangGraph-Building-Graphs.ipynb  02-LangGraph-Naive-RAG.ipynb  03-LangGraph-Add-Groundedness-Check.ipynb  04-LangGraph-Add-Web-Search.ipynb  05-LangGraph-Add-Query-Rewrite.ipynb  06-LangGraph-Agentic-RAG.ipynb  07-LangGraph-CRAG.ipynb  08-LangGraph-Self-RAG.ipynb  09-LangGraph-Adaptive-RAG.ipynb
Day-01/03-RAG/rag/: base.py
Day-01/04-Use-Cases/: 01-LangGraph-Agent-Simulation.ipynb  02-LangGraph-Prompt-Generation.ipynb  03-LangGraph-Plan-and-Execute.ipynb  04-LangGraph-Research-Assistant.ipynb
Day-02/: 01_01_preprocessing_load_parse.ipynb  01_02_preprocessing_chunking.ipynb  01_03_preprocessing_metadata.ipynb  01_04_preprocessing_tabular_data.ipynb  01_05_preprocessing_practice.ipynb  02_01_vectordb_searching_strategy.ipynb  02_02_vectordb_qdrant.ipynb  02_03_dense_reranker_model_via_tei.ipynb  02_04_sparse_korean_embedding.ipynb  02_05_make_retrievers.ipynb  03_adaptive_multiturn_rag.ipynb  04_agentic_rag_evaluation.ipynb  05_01_multimodal_rag.ipynb  05_02_hwp_multimodal_rag.ipynb  05_03_ppt_multimodal_reasoning_rag.ipynb  tei_url.txt
Day-04/: 3_neo4j_docker_run.sh
Day-05/: langfuse_conn.py
